{
    "name": "InputActions",
    "maps": [
        {
            "name": "InGameActionMap",
            "id": "60bba5be-e5d9-48c5-9ff4-a43ae622f165",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e0b0abd9-2a1e-41ff-a937-4b8e3aab3669",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "68d5e53f-3f50-487d-9ef6-623285f08ca4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f27f4c7a-8dde-4890-b04f-c6d85ca06caa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "061766df-49c3-47c5-8948-f6f370d1c358",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "78124cba-5170-4372-8a2c-e45328270231",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d505a1a5-7a6f-4af5-bb03-a942fc35598c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}